kubernetes/apps/monitoring/httproute-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.home-ops.nl
  parentRefs:
    - name: external
      namespace: kube-system
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
